--- a/style.css
+++ b/style.css
@@ -1,19 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap');
+
+
 body {
-    color: red;
-}
+    font-family: 'Roboto Slab', serif;
 
-h1 {
-    color: blue;
-}
-
-h2 {
-    color: rgb(0, 255, 157);
-}
-
-#id-header {
-    color: green;
-}
-
-.para {
-    color: yellowgreen;
 }
