--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
     margin: auto;
 
 }
+hr {
+    margin: 1rem 0rem;
+}
 
 .link {
     text-decoration: none;
@@ -37,4 +40,13 @@ body {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+}
+
+.non-bullet {
+    list-style:none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
 }
