--- a/style.css
+++ b/style.css
@@ -106,3 +106,19 @@ hr {
     background-color: var(--off-wihte);
 }
 
+.footer {
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+
+}
+
+.footer .link {
+    color: white;
+}
+
+.footer ul{
+    padding-inline-start: 0px;
+}
